--- a/auth_user/templates/registration/login.html
+++ b/auth_user/templates/registration/login.html
@@ -116,9 +116,9 @@
       
       <div class="modal-content">
         <span class="close">&times;</span>
-        <h5>Email: sample@gmail.com</h5>
-        <h5>Contact Number: 0909090932</h5>
-        <h5>Address: Normal Road</h5>
+        <h5>wesmaarrdec@gmail.com</h5>
+        <h5>(062) 991 5087 | (062) 955 8298</h5>
+        <h5>WMSU, Normal Road, Baliwasan, Zamboanga City</h5>
       </div>
     
     </div>
