--- a/consortium/templates/consortium/index.html
+++ b/consortium/templates/consortium/index.html
@@ -34,7 +34,7 @@
           {% for cmi in cmis %}
           <div class="box">
             {% if cmi.logo %}
-            <img class="img_logo" src="{{ cmi.logo.url }}" alt="img_commodity">
+            <img class="img_logo" src="{{ cmi.logo.url }}" alt="cmi_logo">
             {% endif %}
             <h2>{{cmi.name}} ({{cmi.agency_code}})</h2>
             
