--- a/commodity/templates/commodity/delete.html
+++ b/commodity/templates/commodity/delete.html
@@ -17,24 +17,72 @@
     <body>
         <div id="nav-placeholder"></div>
         
-                <h2 style="color: rgb(184, 32, 32); font-weight: 700;">Are you sure you want to delete {{program.title}}?</h2>
-                
-                <div class="cont">
-                    <div class="wrapper">
-                        <div class="text-box">
-                            <form method="POST">
-                                {% csrf_token %}
-                                
-                                <div class="name">{{commodity.name}}</div>
-                                <div class="content">{{commodity.name}}</div><br>
-                                <div class="content">{{commodity.name}}</div><br><br>
-                                <a href="{% url 'commodity:commodity' %}" class="btn" style="font-weight: 900;">Back</a>
-                                <input type="submit" name="Confirm" class="btn" value="Confirm" style="font-weight: 900; color: rgb(255, 255, 255);">
-                            </form>
-                        </div>
-                    </div>
+        <div class="container" style="margin-top: 60px;">
+            <h2 class="display-10" style="color: rgb(184, 32, 32); font-weight: 700; text-align: center; ">Are you sure you want to delete this commodity?</h2>
+            <section class="about">
+                <div class="about-image">
+                    {% if commodity.img %}
+                    <img class="img_team" src="{{ commodity.img.url }}" alt="commodity">
+                    {% endif %}
+                    
                 </div>
-       
+                    <div class="about-content">
+                        <h1>{{commodity.name}}</h1>
+                        <p>{{commodity.detail}}</p>
+                        <table>
+                            <tr>
+                                <th></th>
+                                <td></td>
+                            </tr>
+                            
+                            <tr>{% if commodity.produced_by %}
+                                <th>Produced By:</th>
+                                <td>{{commodity.produced_by}}</td>
+                                {%else%}
+                                {% endif %}
+                            </tr>
+    
+                            <tr>
+                                <th>CMI:</th>
+                                <td>{{commodity.cmi_name}}</td>
+                            </tr>
+  
+                            {% if user.is_authenticated %}
+  
+                            <tr>{% for iecmaterial in iecmaterials %}
+                                {% if iecmaterial.iec_file %}
+                                <th>IEC Material: </th>
+                                <td><a href="{{ iecmaterial.iec_file.url }} " target="_blank">{{iecmaterial.title}}</a></td>
+                                {%else%}
+                                {% endif %}
+                                {% endfor %}
+                            </tr>
+                    
+                          
+                        {% if user.is_superuser %}
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{commodity.created_by}}</td>
+                        </tr>
+  
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{commodity.modified_by}}</td>
+                        </tr>
+                        {% endif %}
+                        {% endif %}
+                    </table>
+                    
+                    {% if user.is_superuser or user.secretariat or user.researcher or user.stakeholder %}
+                    <form method="POST">
+                    {% csrf_token %}
+                    <input type="submit" name="Confirm" class="btn btn-danger" value="Confirm">
+                    {% endif %}
+                    <a href="{% url 'commodity:commodity' %}" class="btn btn-secondary">Cancel</a>
+                    </form>
+                </div>
+            </section>
+        </div>
 
         <script>
             $(function(){
