--- a/project/templates/project/delete.html
+++ b/project/templates/project/delete.html
@@ -17,23 +17,188 @@
     <body>
         <div id="nav-placeholder"></div>
         
-                <h2 style="color: rgb(184, 32, 32); font-weight: 700;">Are you sure you want to delete {{project.title}}?</h2>
+        <div class="container">
+            <h2 class="display-10" style="color: rgb(184, 32, 32); font-weight: 700; text-align: center; ">Are you sure you want to delete this project?</h2>
+            <section class="about">
+                    <div class="about-content">
+                    <h1>{{project.title}}</h1>
+                    <p>{{project.proj_description}}</p>
+                    <table>
+                        <tr>
+                            <th></th>
+                            <td></td>
+                        </tr>
+                        
+                        <tr>
+                            <th>Project Type:</th>
+                            <td>{{project.proj_type}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Status:</th>
+                            <td>{{project.status}}</td>
+                        </tr>
+                        <tr>
+                            <th>Program: </th>
+                            <td>{{project.prog_id}}</td>
+                        </tr>
                 
-                <div class="cont">
-                    <div class="wrapper">
-                        <div class="text-box">
-                            <form method="POST">
-                                {% csrf_token %}
-                                
-                                <div class="name">{{project.title}}</div>
-                                <div class="content">{{project.proj_type}}</div><br>
-                                <div class="content">{{project.proj_description}}</div><br><br>
-                                <a href="{% url 'project:project' %}" class="btn" style="font-weight: 900;">Back</a>
-                                <input type="submit" name="Confirm" class="btn" value="Confirm" style="font-weight: 900; color: rgb(255, 255, 255);">
-                            </form>
-                        </div>
-                    </div>
+                        <tr>{% if project.commodity.all %}
+                            <th>Commodity(s):</th>
+                            <td>{{project.commodity.all|join:", "}}</td>
+                            {%else%}
+                            <th>Commodity(s):</th>
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Project Leader:</th>
+                            <td>{{project.proj_leader}}</td>
+                        </tr>
+                        
+                        <tr>{% if project.proj_team.all %}
+                            <th>Project Team:</th>
+                            <td>{{project.proj_team.all|join:", "}}</td>
+                            {%else%}
+                            <th>Project Team:</th>
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Priority Area:</th>
+                            <td>{{project.priority}}</td>
+                        </tr>
+                        
+                        <tr>
+                            <th>SDG: </th>
+                            <td>{{project.sdg_no}}</td>
+                        </tr>
+
+                        <tr>{% if project.proj_stakeholder.all %}
+                            <th>Stakeholder(s): </th>
+                            <td>{{project.proj_stakeholder.all|join:", "}}</td>
+                            {%else%}
+                            <th>Stakeholder(s): </th>
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Implementing Agency: </th>
+                            <td>{{project.impl_agency}}</td>
+                        </tr>
+                        
+                        <tr>{% if project.co_impl_agency.all %}
+                            <th>Co-Implementing Agency(s): </th>
+                            <td>{{project.co_impl_agency.all|join:", "}}</td>
+                            {%else%}
+                            <th>Co-Implementing Agency(s): </th>
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+                    
+                        <tr>{% if project.coop_agency.all %}
+                            <th>Cooperating Agency(s): </th>
+                            <td>{{project.coop_agency.all|join:", "}}</td>
+                            {%else%}
+                            <th>Cooperating Agency(s): </th>
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+                        
+                        <tr>
+                            <th>Funding Agency: </th>
+                            <td>{{project.fund_agency}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Start Date: </th>
+                            <td>{{project.start_date}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>End Date: </th>
+                            <td>{{project.end_date}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Final Implementation Date: </th>
+                            <td>{{project.final_impl_date}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Duration: </th>
+                            <td>{{project.duration}} month(s)</td>
+                        </tr>
+
+                        <tr>{% if project.approved_budget %}
+                            <th>Approved Budget: </th>
+                            <td>P{{project.approved_budget}}</td>
+                            {%else%}{% endif %}
+                        </tr>
+
+                        <tr>{% if project.approved_date %}
+                            <th>Approved Date: </th>
+                            <td>{{project.approved_date}}</td>
+                            {%else%}{% endif %}
+                        </tr>
+
+                        <tr>{% if project.daterequestedext %}
+                            <th>Date Requested Extension: </th>
+                            <td>{{project.daterequestedext}}</td>
+                            {%else%}{% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Requested By: </th>
+                            <td>{{project.requested_by}}</td>
+                        </tr>
+
+                        <tr>{% if project.ext_duration %}
+                            <th>Extension Duration: </th>
+                            <td>{{project.ext_duration}} month(s)</td>
+                            {%else%}{% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Date Uploaded: </th>
+                            <td>{{project.date_uploaded}}</td>
+                        </tr>
+
+                        {% if user.is_authenticated %}
+                        <tr>
+                            {% if project.proj_file %}
+                            <th>Project File: </th>
+                            <td><a href="{{ project.proj_file.url }}" target="_blank">Download File</a></td>
+                            {% endif %}
+                        </tr>
+
+                        {% if user.is_superuser %}
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{project.created_by}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{project.modified_by}}</td>
+                        </tr>
+                        {% endif %}
+                        {% endif %}
+                    </table>
+                    
+                    {% if user.is_superuser or user.secretariat or user.researcher %}
+                    <form method="POST">
+                    {% csrf_token %}
+                    <input type="submit" name="Confirm" class="btn btn-danger" value="Confirm">
+                    {% endif %}
+                    <a href="{% url 'project:project' %}" class="btn btn-secondary">Cancel</a>
+                    </form>
                 </div>
+            </section>
+        </div>
        
 
         <script>
