--- a/sub/templates/sub/detail_priorityarea.html
+++ b/sub/templates/sub/detail_priorityarea.html
@@ -17,28 +17,33 @@
     <body>
         <div id="nav-placeholder"></div>
 
-        <br><br>
-            
-        <div class="cont">
-            <div class="wrapper">
-                <div class="text-box">
-                    <p>
-                        <div class="name">{{priorityarea.area}}</div>
-                        <div class="content">Description:<br> {{priorityarea.description}}</div>
+        <div class="container">
+            <section class="about">
+                    <div class="about-content">
+                    <h1>{{priorityarea.area}}</h1>
+                    <p>{{priorityarea.description}}</p>
+                    <table>
+                        <tr>
+                            <th></th>
+                            <td></td>
+                        </tr>
+
                         {% if user.is_superuser %}
-                        <br>
-                        <div class="content">Created by: {{priorityarea.created_by}}</div>
-                        <div class="content">Modified by: {{priorityarea.modified_by}}</div>
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{priorityarea.created_by}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{priorityarea.modified_by}}</td>
+                        </tr>
                         {% endif %}
-                        <br><br>
-                        <a href="{% url 'sub:prioarea' %}" class="btn" style="font-weight: 600;">Back</a>
-                    </p>
+                    </table>
+                    
+                    <a href="{% url 'sub:prioarea' %}" class="btn btn-secondary">Back</a>
                 </div>
-            </div>
-
-            <div class="#">
-            </div>
-
+            </section>
         </div>
 
         <script>
