--- a/sub/templates/sub/detail_programbudget.html
+++ b/sub/templates/sub/detail_programbudget.html
@@ -17,33 +17,68 @@
     <body>
         <div id="nav-placeholder"></div>
 
-        <br><br>
-            
-        <div class="cont">
-            <div class="wrapper">
-                <div class="text-box">
-                    <p>
-                        <div class="name">{{programbudget.prog_id}}</div>
-                        <div class="content">Year: {{programbudget.yr}}</div>
-                        <div class="content">Fund Source:<br> {{programbudget.fund_source}}</div>
-                        <div class="content">PS:<br> {{programbudget.ps}}</div>
-                        <div class="content">MOOE:<br> {{programbudget.mooe}}</div>
-                        <div class="content">EO:<br> {{programbudget.eo}}</div>
+        <div class="container">
+            <section class="about">
+                    <div class="about-content">
+                    <h1>{{programbudget.prog_id}}</h1>
+                    <p>{{programbudget.yr}}</p>
+                    <table>
+                        <tr>
+                            <th></th>
+                            <td></td>
+                        </tr>
+
+                        <tr>
+                            <th>Fund Source:</th>
+                            <td>{{programbudget.fund_source}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Personal Services:</th>
+                            {% if programbudget.ps %}
+                            <td>P{{programbudget.ps|floatformat:2}}</td>
+                            {%else%}
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Maintenance and Other Operating Expenses:</th>
+                            {% if programbudget.mooe %}
+                            <td>P{{programbudget.mooe|floatformat:2}}</td>
+                            {%else%}
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+
+                        <tr>
+                            <th>Executive Order:</th>
+                            {% if programbudget.eo %}
+                            <td>{{programbudget.eo|floatformat:0}}</td>
+                            {%else%}
+                            <td>None</td>
+                            {% endif %}
+                        </tr>
+                        
+
                         {% if user.is_superuser %}
-                        <br>
-                        <div class="content">Created by: {{programbudget.created_by}}</div>
-                        <div class="content">Modified by: {{programbudget.modified_by}}</div>
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{programbudget.created_by}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{programbudget.modified_by}}</td>
+                        </tr>
                         {% endif %}
-                        <br><br>
-                        <a href="{% url 'sub:progbudg' %}" class="btn" style="font-weight: 600;">Back</a>
-                    </p>
+                    </table>
+                    
+                    <a href="{% url 'sub:progbudg' %}" class="btn btn-secondary">Back</a>
                 </div>
-            </div>
-
-            <div class="#">
-            </div>
-
+            </section>
         </div>
+                    
 
         <script>
             $(function(){
