--- a/sub/templates/sub/detail_sdg.html
+++ b/sub/templates/sub/detail_sdg.html
@@ -17,7 +17,7 @@
     <body>
         <div id="nav-placeholder"></div>
 
-        <div class="container" style="margin-top: 70px;">
+        <div class="container" >
             <section class="about">
                     <div class="about-content">
                     <h1>{{sdg.sdg_title}}</h1>
