--- a/team/templates/team/delete.html
+++ b/team/templates/team/delete.html
@@ -17,25 +17,91 @@
     <body>
         <div id="nav-placeholder"></div>
         
-                <h2 style="color: rgb(184, 32, 32); font-weight: 700;">Are you sure you want to delete {{team.lname}}?</h2>
-                
-                <div class="cont">
-                    <div class="wrapper">
-                        <div class="text-box">
-                            <form method="POST">
-                                {% csrf_token %}
-                                {% if team.photo %}
-                                <img class="img_team" src="{{ team.photo.url }}" alt="img_ferson">
-                                {% endif %}
-                                <div class="fullname">{{team.lname}}, {{team.fname}} {{team.mname}}</div>
-                                <div class="content">CMI:{{team.cmi}}</div>
-                                <div class="content">Position: {{team.position}}</div><br><br>
-                                <a href="{% url 'team:team' %}" class="btn" style="font-weight: 600;">Back</a>
-                                <input type="submit" name="Confirm" class="btn" value="Confirm" style="font-weight: 600; color: rgb(255, 255, 255);">
-                            </form>
-                        </div>
-                    </div>
+        <div class="container">
+            <h2 class="display-10" style="color: rgb(184, 32, 32); font-weight: 700; text-align: center; ">Are you sure you want to delete this profile?</h2>
+            <section class="about">
+                <div class="about-image">
+                    {% if team.photo %}
+                    <img class="img_team" src="{{ team.photo.url }}" alt="img_ferson">
+                    {% else %}
+                    <img class="img_team" src="{% static 'images/default.jpg' %}" alt="profile">
+                    {% endif %}
                 </div>
+                    <div class="about-content">
+                        <h1>{{team.lname}}, {{team.fname}} {{team.mname|default_if_none:""}}</h1>
+                        <h5>{{team.position}}</h5>
+                        <table>
+                            <tr>
+                                <th></th>
+                                <td></td>
+                            </tr>
+                            
+                            <tr>
+                                <th>CMI:</th>
+                                <td>{{team.cmi}}</td>
+                            </tr>
+    
+                            <tr>
+                                <th>Team:</th>
+                                <td>{{team.teams}}</td>
+                            </tr>
+                            <tr>
+                                <th>Sex: </th>
+                                <td>{{team.sex}}</td>
+                            </tr>
+                    
+                            <tr>
+                                <th>Email Address:</th>
+                                <td>{{team.email_add}}</td>
+                            </tr>
+    
+                            <tr>
+                                <th>Date Appointed:</th>
+                                <td>{{team.date_appointed}}</td>
+                            </tr>
+                            
+                            <tr>
+                                <th>Contact Number:</th>
+                                <td>{{team.contact_no}}</td>
+                            </tr>
+                    
+                            <tr>
+                                <th>Specialization: </th>
+                                <td>{{team.specialization}}</td>
+                            </tr>
+
+                            {% if user.is_authenticated %}
+                        <tr>
+                            {% if team.pds_file %}
+                            <th>Pds File: </th>
+                            <td><a href="{{ team.pds_file.url }}" target="_blank">Download File</a></td>
+                            {% endif %}
+                        </tr>
+
+                        {% if user.is_superuser %}
+                        <tr>
+                            <th>Created By: </th>
+                            <td>{{team.created_by}}</td>
+                        </tr>
+
+                        <tr>
+                            <th>Modified By: </th>
+                            <td>{{team.modified_by}}</td>
+                        </tr>
+                        {% endif %}
+                        {% endif %}
+                    </table>
+                    
+                    {% if user.is_superuser or user.secretariat %}
+                    <form method="POST">
+                    {% csrf_token %}
+                    <input type="submit" name="Confirm" class="btn btn-danger" value="Confirm">
+                    {% endif %}
+                    <a href="{% url 'team:team' %}" class="btn btn-secondary">Cancel</a>
+                    </form>
+                </div>
+            </section>
+        </div>
        
 
         <script>
